--- a/Bro 2.HTML
+++ b/Bro 2.HTML
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <title>My Resume</title>
+    <link rel="icon" href="relax.jpg" type="image/x-icon">
+  </head>
 <body>
-   <fieldset><legend>Signup</legend></fieldset>
-   <br>
-<form action="Bro 2.HTML">
+   <fieldset><legend>Signup</legend>
+    <img src="relax.jpg" alt="" height="180px" >
+    <ul id="myUL">
+  <li>very friendly</li>
+  <li>Got 100% in chemistry</li>
+  <li>Plays badminton like a pro</li>
+  <li>Creative and intelligent</li>
+  <li>Reads books</li>
+  <li>Not a procrastinator</li>
+</ul>
+
+   <form action="Bro 2.HTML">
     <label for="Name">Name</label>
     <input type="text" id="Name" placeholder="Enter your name" maxlength="10" value="Ghani" required><br>
    <br> 
@@ -29,4 +39,5 @@
     <button type="reset">Reset</button>
 </form>
 </body>
+</fieldset>
 </html>
